--- a/myresume.html
+++ b/myresume.html
@@ -307,7 +307,7 @@ div.tocify {
       <a href="Innovationmeasures.pdf">Innovation measures</a>
     </li>
     <li>
-      <a href="https://github.com/anwaarms/Map-of-Tunisia">Map of Tunisia</a>
+      <a href="https://anwaarms.shinyapps.io/dashing/">Map of Tunisia</a>
     </li>
   </ul>
 </li>
