--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ $(document).ready(function () {
       <a href="Innovationmeasures.pdf">Innovation measures</a>
     </li>
     <li>
-      <a href="https://github.com/anwaarms/Map-of-Tunisia">Map of Tunisia</a>
+      <a href="https://anwaarms.shinyapps.io/dashing/">Map of Tunisia</a>
     </li>
   </ul>
 </li>
